--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
                 <option>Straight-cut: XL</option>
               </select>
             </div>
+
+            <div class="push unit xs-1 s-1 m-1 l-1-2">
+              <label for="email">Email</label>
+              <input id="email" type="email" name="email" required>
+            </div>
+
+            <div class="push unit xs-1 s-1 m-1 l-1-2">
+              <label class="optional" for="email">Phone number</label>
+              <input id="email" type="email" name="email">
+            </div>
+
           </fieldset>
+
+          <hr>
 
           <fieldset>
             <legend class="push mega italic">Address</legend>
@@ -65,16 +78,32 @@
             <div class="grid">
 
               <div class="push pad-r unit xs-1 s-1 m-1 l-1-2">
-                <label for="name">Street address</label>
-                <input id="name" name="name">
-                <p>Your full legal name, for insurance purposes, e.g. “Elizabeth Bradley”.</p>
+                <label for="address">Street address</label>
+                <input id="address" name="address">
+              </div>
+
+              <div class="push unit xs-1 s-1 m-1 l-1-2 push pad-l">
+                <label for="subject">Province</label>
+                <select id="subject" placeholder="Select a Province" name="_subject" required>
+                  <option></option>
+                  <option>Alberta</option>
+                  <option>British Columbia</option>
+                  <option>Manitoba</option>
+                  <option>New Brunswick</option>
+                  <option>Newfoundland & Labrador</option>
+                  <option>Northwest Territories</option>
+                  <option>Nova Scotia</option>
+                  <option>Nunavut</option>
+                  <option>Ontario</option>
+                  <option>Prince Edward Island</option>
+                  <option>Québec</option>
+                  <option>Saskatchewan</option>
+                  <option>Yukon</option>
+                </select>
               </div>
           </fieldset>
 
-            <div class="push unit xs-1 s-1 m-1 l-1-2">
-              <label for="email">Email</label>
-              <input id="email" type="email" placeholder="me@me.com" name="email" required>
-            </div>
+          <hr>
 
             <div class="unit xs-1 s-1 m-1 l-1">
               <label for="address">Address</label>
